--- a/LinearRegression/01-LinearRegression.ipynb
+++ b/LinearRegression/01-LinearRegression.ipynb
@@ -2,11 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.datasets import data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 线性回归法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "解决回归问题\n",
+    "\n",
+    "思想简单 实现容易\n",
+    "\n",
+    "许多强大的非线性模型基础\n",
+    "\n",
+    "结果具有很好的可解释性\n",
+    "\n",
+    "蕴含机器学习中的很多重要思想"
    ]
   },
   {
